# python-learning-sequel

./: pyproject.toml
fastapi/: main.py  test_server.py
fastapi-mongo-react/backend/: database.py  main.py
fastapi-sqlmodel/: books.db  create_db.py  database.py  db_engine.py  main.py  models.py
