[tool.poetry]
name = "python-learning-sequel"
version = "0.1.0"
description = ""
authors = ["Dzalapino <jpodkomorka19@gmail.com>"]
readme = "README.md"
packages = [{include = "python_learning_sequel"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
